kubernetes/sit/ingress/private-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sit-helloworld-private-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-7369383a, subnet-59c0dd1f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-032900f61b5460c5a
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:354285753755:certificate/44e11307-55f4-4365-a0fe-0c408af4f7fa
    alb.ingress.kubernetes.io/healthcheck-path: /
  labels:
    app: sit-helloworld-private-alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation

    - host: helloworld-django.labs.bka.sh
      http:
        paths:
          - backend:
              serviceName: sit-helloworld-go
              servicePort: 8080
