kubernetes/sit/ingress/public-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sit-helloworld-public-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-4978670f, subnet-bf092df6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:354285753755:certificate/44e11307-55f4-4365-a0fe-0c408af4f7fa
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-032900f61b5460c5a
    alb.ingress.kubernetes.io/healthcheck-path: /

  labels:
    app: sit-helloworld-public-alb
spec:
  rules:
    - host: helloworld-go.labs.bka.sh
      http:
        paths:
          - backend:
              serviceName: sit-helloworld-go
              servicePort: 8888
